# nbn-python-package-template

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  TEMPLATE_README.md  pyproject.toml
.github/: CODEOWNERS  copilot-instructions.md  dependabot.yml  pull_request_template.md
.github/agents/: architect.agent.md  beast-mode.agent.md  clean-code.agent.md  debugger.agent.md  prd-creation.agent.md
.github/instructions/: ai-prompt-engineering-safety-best-practices.instructions.md  clean-code.instructions.md  github-actions.instructions.md  instructions.instructions.md  markdown.instructions.md  python.instructions.md  security-and-owasp.instructions.md  shell.instructions.md
.github/workflows/: ci.yml  release-branch.yml  release-publish.yml
scripts/: build.sh  clean.sh  lint.sh  run_local.sh  run_precommit.sh  run_tests.sh  setup.sh
scripts/helpers/: common.sh  print.sh  python.sh  uv.sh
src/nbn_dummy_package/: __init__.py  hello.py
tests/: test_hello.py
