[project]
# Ensure name is unique on PyPI to avoid conflicts
name = "nbn-dummy-package"
# Version is updated automatically by GitHub Actions workflow
version = "0.0.0"
description = "NBN Python project template with best practices"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Proprietary" }
authors = [
    { name = "johndoe_nbnco", email = "johndoe@nbnco.com.au" }
]
classifiers = [
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = []

[project.scripts]
nbn-hello = "nbn_dummy_package.hello:main"

[dependency-groups]
dev = [
    "commitizen>=4.10.0",
    "diff-cover>=9.7.2",
    "pre-commit>=4.4.0",
    "pytest>=9.0.1",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
    "ruff>=0.14.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--verbose",
    "--cov=src",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
    "--durations=5"
]

[tool.coverage.run]
source = ["src"]
omit = ["tests/*", "*/test_*.py", "*/__pycache__/*", "*/__init__.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == \"__main__\":"
]

[tool.ruff]
line-length = 120
indent-width = 4

[tool.ruff.lint]
exclude = ["__init__.py"]
select = [
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "E",  # pycodestyle errors
    "F",  # pyflakes
    "I",  # isort
    "W",  # pycodestyle warnings
    "UP", # pyupgrade
]
fixable = ["ALL"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = true

[tool.ruff.lint.isort]
lines-after-imports = 2
no-sections = true

[tool.uv]
native-tls = true

# # Uncomment to use NBN internal PyPI mirror (requires NBN certs to be installed in the system)
# [[tool.uv.index]]
# name = "pypi-mirror"
# url = "https://apro.nbnco.net.au/api/pypi/cdtools-pypi-virtual/simple"
# default = true

# # Settings to publish image to Artifactory using `uv publish`, replace with your own Artifactory repo URL
# [[tool.uv.index]]
# name = "nbn-artifactory"
# url = "https://apro.nbnco.net.au/api/pypi/test-pypi/simple"
# publish-url = "https://apro.nbnco.net.au/artifactory/api/pypi/test-pypi"
# explicit = true

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.0.0"
bump_message = "chore: bump version from $current_version to $new_version"
version_files = [
    "pyproject.toml:version"
]
update_changelog_on_bump = true
